--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1> Hello, guys! </h1>
-<p> How are you doing?</p>
+<h1> Hello, guys!  </h1>
+<p> How is it going</p>
 </body>
 </html>
 
