--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <body>
 <h1> Hello, guys!  </h1>
-<p> How are you, how is it going</p>
+<p> How are you, how is it going and what about you</p>
 </body>
 </html>
 
